IMPALA-1506: gzip compressor incorrectly sets output size

A bug was discovered where our gzip compression path did not correctly set the output
block size in all cases. It would appear this code has been erroneous for well over a year
and the issue just surfaced because the code path was not being used regularly.

Change-Id: I8da7415f2b3c558e33ab0c0ac53e907501806e83
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/5379
Reviewed-by: Victor Bittorf <victor.bittorf@cloudera.com>
Tested-by: jenkins